--- a/content/pages/rules/session/025/index.adoc
+++ b/content/pages/rules/session/025/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/025/
 :category: session
 :description: This documents contains the details of the security requirements related to web application session management and session variables. This requirement establishes the importance of informing and controlling concurrent sessions, in order to detect user impersonations and identity thefts.
-:keywords: Requirement, Security, Manage, Concurrent, Session, Configuration
+:keywords: Manage, Concurrent, Session, Configuration, ASVS, CWE
 :rules: yes
 
 = R025. Manage concurrent sessions
@@ -54,6 +54,16 @@ without traceability nor authorization.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/Top_10_2013-A2-Broken_Authentication_and_Session_Management[Top 10 2013-A2-Broken Authentication and Session Management].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/384.html[CWE-384: Session Fixation].
+Authenticating a user, or otherwise establishing a new user session,
+without invalidating any existing session identifier gives an attacker the
+opportunity to steal authenticated sessions.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.2 General Authenticator Requirements.(2.2.3)]
+Verify that secure notifications are sent to users after updates to
+authentication details,
+such as credential resets, email or address changes, logging in from unknown or
+risky locations.
 
 . [[r2]] link:https://pcinetwork.org/forum/index.php?threads/pci-dss-3-0-6-5-10-broken-authentication-and-session-management.667/[[PCI DSS 3.0\] 6.5.10 Broken authentication and session management].
