feat(doc): #2994.130 add refs to some rules
- Added ASVS, CWE and NIST references to R127
- Added CWE and NIST references to R134
- Added a Description to R127
- Updated R127 and R134 Keywords
- Fixed the content of a reference in R135
- Fixed some grammar issues


Former-commit-id: 61e971734d15e6ca1ded3f570a737f019249dc02

--- a/content/pages/rules/credentials/135/index.adoc
+++ b/content/pages/rules/credentials/135/index.adoc
@@ -30,9 +30,9 @@ be reversible, such as a password,
 but the software uses a predictable salt as part of the input.
 
 . [[r3]] link:https://cwe.mitre.org/data/definitions/916.html[CWE-916: Use of Password Hash With Insufficient Computational Effort].
-The software uses a one-way cryptographic hash against an input that should not
-be reversible, such as a password,
-but the software uses a predictable salt as part of the input.
+The software generates a hash for a password,
+but it uses a scheme that does not provide a sufficient level of computational
+effort that would make password cracking attacks infeasible or expensive.
 
 . [[r5]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
 The salt SHALL be at least 32 bits in length and be chosen arbitrarily so as to
