--- a/content/pages/rules/credentials/127/index.adoc
+++ b/content/pages/rules/credentials/127/index.adoc
@@ -1,23 +1,52 @@
 :slug: rules/127/
 :category: credentials
 :description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining cryptographic mechanisms to store passwords securely and avoid common attacks.
-:keywords: Requirement, Security, Passwords, Hash, Cryptography, Algorithms
+:keywords: Passwords, Hash, Algorithms, ASVS, CWE, NIST
 :rules: yes
 
 = R127. Store hashed passwords
 
 == Requirement
 
-Passwords must be stored using hash algorithms.
+Passwords must be hashed before being stored using secure hash algorithms such
+as *PBKDF2* and *bcrypt*.
+
+== Description
+
+A hash function maps data of arbitrary size to fixed-size values.
+It conceals sensitive information as it is often not possible to reverse
+hashed texts.
+Hashing passwords helps prevent unauthorized actors that may have accessed the
+storage system from obtaining them.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.13+]
-Verify that account passwords are one way hashed with a salt,
-and there is sufficient work factor
-to defeat brute force and password hash recovery attacks.
+. [[r1]] link:https://cwe.mitre.org/data/definitions/916.html[CWE-916: Use of Password Hash With Insufficient Computational Effort].
+The software generates a hash for a password,
+but it uses a scheme that does not provide a sufficient level of computational
+effort that would make password cracking attacks infeasible or expensive.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.21+]
-Verify that all authentication credentials
-for accessing services external to the application
-are encrypted and stored in a protected location.
+. [[r2]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.1.2 Memorized Secret Verifiers]
+Memorized secrets SHALL be salted and hashed using a suitable one-way key
+derivation function.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.4 Credential Storage Requirements.(2.4.1)]
+Verify that passwords are stored in a form that is resistant to offline
+attacks.
+Passwords SHALL be salted and hashed using an approved one-way key derivation
+or password hashing function.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.4 Credential Storage Requirements.(2.4.3)]
+Verify that if PBKDF2 is used,
+the iteration count SHOULD be as large as verification server performance will
+allow,
+typically at least 100,000 iterations.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.4 Credential Storage Requirements.(2.4.4)]
+Verify that if bcrypt is used,
+the work factor SHOULD be as large as verification server performance will
+allow,
+typically at least 13.
