feat(doc): #2994.131 create rule 333
- Created R331 for salt values storage
- Added a Description
- Added CWE, NIST and ASVS references
- Adjusted R185 for PII coverage


Former-commit-id: 0922b2055c3fc6094d79ccf34923808a884cd440

--- a/content/pages/rules/data/185/index.adoc
+++ b/content/pages/rules/data/185/index.adoc
@@ -12,8 +12,8 @@ All stored sensitive information must be encrypted.
 
 == Description
 
-Systems usually store personal data, credentials and other types of sensitive
-information.
+Systems usually store personal data, e.i. Personally Identifiable Information
+(*PII*), credentials and other types of sensitive information.
 All of these must be encrypted before being stored using safe cryptographic
 mechanisms.
 This is also applicable when personal information must be temporarily stored
