--- a/content/pages/careers/reverse-references/index.adoc
+++ b/content/pages/careers/reverse-references/index.adoc
@@ -5,28 +5,27 @@
 
 = References
 
-In this stage of the process
+In this stage of the process,
 we validate the references
-from your previous employer
-in the following manner:
-Two of your direct bosses (your boss’ superior and/or family does not apply)
+from your previous employer.
+Two of your direct bosses (your boss's superior and your family do not apply)
 from the previous jobs you listed in our application
-must give us a call at the number given below.
+must call at the number given below.
 
-This is all about doing everything that is needed
+This is all about doing everything needed
 to get two of your bosses to give us a call
 in order to have a short conversation with them
 regarding your performance
 so that we can get an idea of
-how you worked in said company.
+how you worked in said companies.
 
-* Cellphone: *+57 300 496 3851*
+* Cellphone: *+57 320 788 1879*
 
 Please send us an email
 confirming the names and contact information
 of the two bosses that are going to call us.
 
-Don’t hesitate to contact us
-with any doubts regarding the process.
+Don't hesitate to contact us
+if you have any doubts regarding the process.
 
-The person that will contact you is: Santiago Vélez Robledo.
+The person that will contact you is Juan Restrepo.
