refac(doc): #2994.132 update rule 142 references
- Updated R142 ASVS references
- Removed references with broken links
- Updated R142 Keywords
- Fixed some grammar issues


Former-commit-id: ed869cd42ff48622771ee24625b61b4ab2ad29c9

--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/142/
 :category: credentials
 :description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of modifying all default credentials in the system in order to avoid brute force attacks.
-:keywords: Requirement, Security, Credentials, Default, Password, System
+:keywords: Change, Credentials, Default, Password, System, ASVS
 :rules: yes
 
 = R142. Change system default credentials
@@ -14,40 +14,37 @@ all default access credentials of embedded systems.
 == Description
 
 Organizations usually keep default configurations
-of third parties products
+of third-party products
 since these may adapt to most environments where they are installed
-and facilitate the deployment to production,
-but this practice may leave a default open gate for products
-and in most cases credentials found in provider documentation
-which can be found easily on internet.
-For this reason it's important to check all configurations
-before deployment and remove all default credentials
-in order to avoid brute force accesses.
+and facilitate the deployment to production.
+However, this practice may leave a default open gate for products
+and, in most cases, credentials found in provider documentation,
+which can be found easily on the Internet.
+For this reason it is important to check all configurations
+before deployment and remove all default credentials.
 
 == Implementation
 
-. Remove all default credentials from
-product provider
+. Remove all default credentials.
 
 . Implement a mechanism to ensure only users
 with administrator privileges can access
-to product access consoles
+product consoles.
 
-. Create a robust credentials policy
+. Create a robust credential policy
 to improve the security of all credentials in the organization.
 
 . The passwords must be changed every so often
- to avoid theft of these.
+in case they are compromised.
 
 . Perform audits periodically
-to detect misconfigurations or missing patches.
+to detect improper configurations or missing patches.
 
 
 == Attacks
 
 . Brute force attack.
 . Information leakage: Technical.
-
 
 == Attributes
 
@@ -66,11 +63,12 @@ to detect misconfigurations or missing patches.
 == References
 
 . [[r1]] link:http://capec.mitre.org/data/definitions/70.html[CAPEC-70 - Try Common Usernames and Passwords]
+An adversary may try certain common or default usernames and passwords to gain
+access into the system and perform unauthorized actions.
 
-. [[r2]] link:https://www.owasp.org/index.php/Top_10_2013-A5-Security_Misconfiguration[OWASP - Top 10 2013: A5]
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.5 Credential Recovery Requirements.(2.5.4)]
+Verify shared or default accounts are not present
+(e.g. "root", "admin", or "sa").
 
-. [[r3]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.19+]
-Verify there are no default passwords in use for the application framework
-or any components used by the application (such as “admin/password”).
-
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2es-LA.pdf[PCI DSS - Requirement 2.2.d]
