refac(doc): #3286 rules-asserts-resources
- Rules and Asserts are now presented on Resources section.


Former-commit-id: 9311c5da87136ad9949d2ad51c356fbfbdca5d45

--- a/new/content/pages/resources/index.adoc
+++ b/new/content/pages/resources/index.adoc
@@ -1,8 +1,21 @@
 :slug: resources/
-:description: The purpose of this page is to present resources of Fluid Attacks. Here are the datasheets of our products: Drills, Forces, and Integrates. Besides, all the annual reports will appear. Users who visit our website can download all the elements presented here.
+:description: The purpose of this page is to present resources of Fluid Attacks. Here are Rules and Asserts, and the datasheets of our products: Drills, Forces, and Integrates. Besides, all the annual reports will appear. Users who visit our website can download all the elements presented here.
 :keywords: Fluid Attacks, Products, Software, Documentation, Security, Information.
 
 = Resources
+
+== link:[Rules]
+
+*Rules* is a set of security requirements
+that allows you to parameterize a pentest
+according to your organization's risk appetite.
+
+== link:[Asserts]
+
+*Asserts* is an open-source tool
+that looks for deterministic and peripheral vulnerabilities,
+and that automates attacks
+to verify the status of vulnerabilities on your system.
 
 == link:[Annual Report 2020]
 
