feat(doc): #2994.133 add asvs reference to r126
Former-commit-id: bf33e6210dd9de05cf27b2472c26a7faa1bb16d7

--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -30,3 +30,10 @@ which makes it easier for attackers to compromise user accounts.
 . [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.5)]
 Verify users can change their password.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.5 Credential Recovery Requirements.(2.5.6)]
+Verify forgotten password, and other recovery paths use a secure recovery
+mechanism,
+such as TOTP or other soft token, mobile push, or another offline recovery
+mechanism.
