--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -8,7 +8,7 @@
 
 == Requirement
 
-The system must provide a mechanism
+The system must provide a secure mechanism
 to regenerate a user's password.
 
 == Description
@@ -20,6 +20,8 @@ Alternatively, passwords can be leaked as a result of a user's actions or a
 breach in the system,
 thus, there should also exist a secure mechanism that allows users to change
 their passwords when they require it.
+Furthermore, none of these mechanisms should send a recovery secret in plain
+text.
 
 == References
 
@@ -27,11 +29,21 @@ their passwords when they require it.
 The product does not require that users should have strong passwords,
 which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://cwe.mitre.org/data/definitions/640.html[CWE-640: Weak Password Recovery Mechanism for Forgotten Password]
+The software contains a mechanism for users to recover or change their
+passwords without knowing the original password,
+but the mechanism is weak.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.5)]
 Verify users can change their password.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.5 Credential Recovery Requirements.(2.5.1)]
+Verify that a system generated initial activation or recovery secret is not
+sent in clear text to the user.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.5 Credential Recovery Requirements.(2.5.6)]
 Verify forgotten password, and other recovery paths use a secure recovery
 mechanism,
