refac(doc): #3153 change-link-history
- The link for instructions on History section is changed


Former-commit-id: cedcd7af1285475178ff3ac94ea461e6b7f29569

--- a/content/pages/careers/index.adoc
+++ b/content/pages/careers/index.adoc
@@ -74,7 +74,7 @@ To do this you must first complete the previous stage.
 
 [role="h_formLink"]
 To begin,
-you just have to follow these detailed [inner]#link:https://fluidattacks.com/forms/periodo[instructions]#
+you just have to follow these detailed link:https://forms.zohopublic.com/autonomic/form/EmailSubscription/formperma/uULwpjYyJE6S0EbBNkk1u4iqvdw1NeIMxr1KPZHjo3w?fbclid=IwAR06jKXDkeP96mTECFubNKduoCUHhPNJVfVf4yU3clK3X4qhV-uZT22T6Q8[instructions].
 
 == 7. Evaluations
 
