feat(doc): #2994.137 add asvs ref to rule 126
- Added ASVS reference to R126
- Adjusted the content for coverage


Former-commit-id: 68ab2cd56da0a001aafaf2b7adb253e4a2e18b22

--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -21,7 +21,7 @@ breach in the system,
 thus, there should also exist a secure mechanism that allows users to change
 their passwords when they require it.
 Furthermore, none of these mechanisms should send a recovery secret in plain
-text.
+text nor should they reveal the current password.
 
 == References
 
@@ -44,6 +44,11 @@ Verify that a system generated initial activation or recovery secret is not
 sent in clear text to the user.
 
 . [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.5 Credential Recovery Requirements.(2.5.3)]
+Verify password credential recovery does not reveal the current password in any
+way.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.5 Credential Recovery Requirements.(2.5.6)]
 Verify forgotten password, and other recovery paths use a secure recovery
 mechanism,
