feat(doc): #2994.138 add refs to rule 140
- Added ASVS, NIST and CWE references to R140
- Added a Description
- Updated R140 Keywords


Former-commit-id: 929b263ce48e7dcaabe0060a2fb956bbdec3797a

--- a/content/pages/rules/credentials/140/index.adoc
+++ b/content/pages/rules/credentials/140/index.adoc
@@ -1,11 +1,63 @@
 :slug: rules/140/
 :category: credentials
 :description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining a short lifespan for single use passwords such as access tokens and OTPs.
-:keywords: Security, Requirement, Password, Lifespan, OTP, Access Token
+:keywords: Password, Lifespan, OTP, ASVS, CWE, NIST
 :rules: yes
 
 = R140. Define OTP lifespan
 
 == Requirement
 
-One Time Passwords +OTP+ must have a maximum lifespan of +60+ seconds.
+One time passwords (*OTP*) must have a maximum lifespan of *60* seconds.
+
+== Description
+
+*OTP*s are tokens that help hinder phishing (impersonation) attacks.
+They should be generated using secure cryptographic algorithms,
+be sent over a protected channel and have a short lifespan that considers
+network delay and entry time.
+Furthermore, it should only be possible to use them once within their validity
+period.
+
+== References
+
+. [[r1]] link:https://cwe.mitre.org/data/definitions/287.html[CWE-287: Improper Authentication]
+When an actor claims to have a given identity,
+the software does not prove or insufficiently proves that the claim is correct.
+
+. [[r2]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength]
+The software stores or transmits sensitive data using an encryption scheme that
+is theoretically sound,
+but is not strong enough for the level of protection required.
+
+. [[r3]] link:https://cwe.mitre.org/data/definitions/613.html[CWE-613: Insufficient Session Expiration]
+According to WASC, "Insufficient Session Expiration is when a web site permits
+an attacker to reuse old session credentials or session IDs for authorization."
+
+. [[r4]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.4.2 Single-Factor OTP Verifiers]
+Time-based OTPs SHALL have a defined lifetime that is determined by the
+expected clock drift — in either direction — of the authenticator over its
+lifetime.
+
+. [[r5]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.4.2 Single-Factor OTP Verifiers]
+The verifier SHALL use approved encryption and an authenticated protected
+channel when collecting the OTP in order to provide resistance to eavesdropping
+and MitM attacks.
+
+. [[r6]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.1.4.2 Single-Factor OTP Verifiers]
+In order to provide replay resistance as described in Section 5.2.8,
+verifiers SHALL accept a given time-based OTP only once during the validity
+period.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.1)]
+Verify that time-based *OTP*s have a defined lifetime before expiring.
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.3)]
+Verify that approved cryptographic algorithms are used in the generation,
+seeding, and verification.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.4)]
+Verify that time-based *OTP*s can be used only once within the validity period.
