--- a/content/pages/rules/cryptography/147/index.adoc
+++ b/content/pages/rules/cryptography/147/index.adoc
@@ -1,6 +1,6 @@
 :slug: rules/147/
 :category: cryptography
-:description: This document contains the details of the security requirements related to definition and management of cryptographic systems. This requirement establishes the importance of using pre-existing and current mechanisms to implement the cryptographic functions used by the system.
+:description: This document contains the details of the security requirements related to definition and management of cryptographic systems. This requirement establishes the importance of using pre-existing and up-to-date mechanisms to implement the cryptographic functions used by the system.
 :keywords: Cryptographic, Encryption, Mechanisms, HIPAA, NIST, ASVS
 :rules: yes
 
@@ -9,40 +9,50 @@
 == Requirement
 
 The cryptographic functions of the system
-must be implemented with pre-existing and current cryptographic mechanisms.
+must be implemented with pre-existing and up-to-date cryptographic mechanisms.
 
 == Description
 
-System cryptographic keys are essential for maintaining the confidentiality
-and integrity of transactions and communications.
-Therefore, these keys must be protected and managed following the most secure
-and up to date industry-verified standards.
+System cryptographic functions are essential for maintaining the
+confidentiality and integrity of transactions and communications.
+Therefore, these functions must be based on pre-existent, tested, approved and
+secure mechanisms.
 
 == References
 
-. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(a)(2)(iv):]
+. [[r1]] link:https://cwe.mitre.org/data/definitions/326.html[CWE-326: Inadequate Encryption Strength]
+The software stores or transmits sensitive data using an encryption scheme that
+is theoretically sound,
+but is not strong enough for the level of protection required.
+
+. [[r2]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(a)(2)(iv):]
 Encryption and Decryption: Implement a mechanism to encrypt and decrypt
 electronic protected health information.
 
-. [[r2]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-7[NIST 800-53 IA-7]
+. [[r3]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-7[NIST 800-53 IA-7]
 Cryptographic module authentication:
 The information system implements mechanisms for authentication
 to a cryptographic module that meet the requirements
 of applicable federal laws, Executive Orders, directives, policies,
 regulations, standards, and guidance for such authentication.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.6 Cryptographic Architectural Requirements.(1.6.1)]
 Verify that there is an explicit policy for management of cryptographic keys
 and that a cryptographic key lifecycle follows a key management standard such
 as **NIST SP 800-57**.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.6 Cryptographic Architectural Requirements.(1.6.2)]
 Verify that consumers of cryptographic services protect key material and other
 secrets by using key vaults or API based alternatives.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.6 Cryptographic Architectural Requirements.(1.6.3)]
 Verify that all keys and passwords are replaceable and are part of a
 well-defined process to re-encrypt sensitive data.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.3)]
+Verify that approved cryptographic algorithms are used in the generation,
+seeding, and verification.
