--- a/new/content/pages/products/forces/index.adoc
+++ b/new/content/pages/products/forces/index.adoc
@@ -6,7 +6,7 @@
 = Forces
 
 [role="forces-feature w-25-ns w-90 dib tl v-top pa3"]
-== link:../../../newweb/blog/stand-shoulders-giants/[Software composition analysis (SCA)]
+== link:../../../newweb/blog/stand-shoulders-giants/[Software Composition Analysis]
 
 [role="fw1 f-key-features lh-key-features"]
 Now Forces searches your dependencies’ package managers for reported
@@ -22,7 +22,7 @@ AWS (terraform and cloudformation), Azure, and GCP.
 
 
 [role="forces-feature w-25-ns w-90 dib tl v-top pa3"]
-== Operating System vulnerabilities
+== Operating system vulnerabilities
 
 [role="fw1 f-key-features lh-key-features"]
 Linux and Windows Server.
