feat(doc): #2994.140 add refs to rule 231
- Added ASVS, CWE and NIST references to R231
- Removed old ASVS reference
- Added a Description
- Updated R231 keywords
- Fixed a grammar issue in other rules


Former-commit-id: 2aa4c3c1f8d733f304c3307f82822665b4cfe9ee

--- a/content/pages/rules/credentials/126/index.adoc
+++ b/content/pages/rules/credentials/126/index.adoc
@@ -17,8 +17,8 @@ Passwords are identity assertion elements that can be easily lost or forgotten.
 Systems should have a secure mechanism that allows users to generate a new
 password when they have lost their previous one.
 Alternatively, passwords can be leaked as a result of a user's actions or a
-breach in the system,
-thus, there should also exist a secure mechanism that allows users to change
+breach in the system.
+Thus, there should also exist a secure mechanism that allows users to change
 their passwords when they require it.
 Furthermore, none of these mechanisms should send a recovery secret in plain
 text nor should they reveal the current password.
