--- a/content/pages/rules/authentication/231/index.adoc
+++ b/content/pages/rules/authentication/231/index.adoc
@@ -1,15 +1,26 @@
 :slug: rules/231/
 :category: authentication
 :description: This document contains the details of the security requirements related to the definition and management of access credentials in the organization. This requirement establishes the importance of defining mechanisms and components for biometric verification during authentication process.
-:keywords: Requirement, Security, Authentication, Biometric, Validation, Access Credentials
+:keywords: Authentication, Biometric, Verification, ASVS, GDPR, NIST
 :rules: yes
 
 = R231. Define a biometric verification component
 
 == Requirement
 
-Systems with critical information must define a component
-for biometric verification during authentication process.
+Systems with critical information must implement a component
+for biometric verification during the authentication process.
+
+== Description
+
+Biometric authentication relies on the unique biological characteristics of an
+individual and serves as an additional security measure for identity assertion.
+Critical systems must have specially restrictive access controls.
+Therefore, they should include a biometric verification component to increase
+the security of the authentication process.
+This component, however, must not be the only identity assertion mechanism in
+place,
+it should only be a secondary factor.
 
 == Findings
 
@@ -19,24 +30,39 @@ for biometric verification during authentication process.
 
 == References
 
-. [[r1]] link:https://gdpr-info.eu/recitals/no-64/[GDPR. Recital 64: Identity verification].
+. [[r1]] link:https://cwe.mitre.org/data/definitions/308.html[CWE-308: Use of Single-factor Authentication]
+The use of single-factor authentication can lead to unnecessary risk of
+compromise when compared with the benefits of a dual-factor authentication
+scheme.
+
+. [[r2]] link:https://gdpr-info.eu/recitals/no-64/[GDPR. Recital 64: Identity verification].
 The controller should use all reasonable measures to verify the identity of a
 data subject who requests access,
 in particular in the context of online services and online identifiers.
 
-. [[r2]] link:https://www.law.cornell.edu/cfr/text/45/164.310[+HIPAA Security Rules+ 164.310(a)(2)(iii):]
+. [[r3]] link:https://www.law.cornell.edu/cfr/text/45/164.310[HIPAA Security Rules 164.310(a)(2)(iii):]
 Access Control and Validation Procedures: Implement procedures
 to control and validate a person's access to facilities
 based on their role or function, including visitor control,
 and control of access to software programs for testing and revision.
 
-. [[r3]] link:https://www.law.cornell.edu/cfr/text/45/164.312[+HIPAA Security Rules+ 164.312(d):]
+. [[r4]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(d):]
 Person or Entity Authentication:
 Implement procedures to verify that a person or entity
 seeking access to electronic protected health information
 is the one claimed.
 
-. [[r4]] link:https://www.owasp.org/index.php/ASVS_V2_Authentication[+OWASP-ASVS v3.1-2.31+]
-Verify that users can enrol and use TOTP verification, two-factor, biometric
-(Touch ID or similar), or equivalent multi-factor authentication mechanism
-that provides protection against single factor credential disclosure.
+. [[r5]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.2.3 Use of Biometrics]
+Biometrics SHALL be used only as part of multi-factor authentication with a
+physical authenticator (something you have).
+
+. [[r6]] link:https://pages.nist.gov/800-63-3/sp800-63b.html[NIST 800-63B 5.2.3 Use of Biometrics]
+An authenticated protected channel between sensor
+(or an endpoint containing a sensor that resists sensor replacement)
+and verifier SHALL be established and the sensor or endpoint SHALL be
+authenticated prior to capturing the biometric sample from the claimant.
+
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V2.8 Single or Multi Factor One Time Verifier Requirements.(2.8.7)]
+Verify that biometric authenticators are limited to use only as secondary
+factors in conjunction with either something you have and something you know.
